@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.14 2007/04/11 06:51:19 ghen Exp $
+$NetBSD: distinfo,v 1.15 2008/08/16 06:55:18 manu Exp $
 
-SHA1 (ipsec-tools-0.6.7.tar.bz2) = ed3a6566409c506d5a7cd82cf263a5b8df3fad55
-RMD160 (ipsec-tools-0.6.7.tar.bz2) = 97c27922f5be941fd6c69e35e69bed921b9f13e7
-Size (ipsec-tools-0.6.7.tar.bz2) = 723032 bytes
+SHA1 (ipsec-tools-0.7.1.tar.bz2) = 7a2ef71ece73710bf9a5ef2f63aacfcea1c58efb
+RMD160 (ipsec-tools-0.7.1.tar.bz2) = 98c5bb292006fb49eb78133059ee74d0dd3b8122
+Size (ipsec-tools-0.7.1.tar.bz2) = 784046 bytes
